SUBDIRS =
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src
noinst_LTLIBRARIES =

# noinst_LTLIBRARIES += libfile_path_watcher.la
# libfile_path_watcher_la_CPPFLAGS = -I$(top_srcdir)/src
# libfile_path_watcher_la_SOURCES = files/file_path_watcher.h
# libfile_path_watcher_la_SOURCES += files/file_path_watcher_@FILE_PATH_WATCHER_SUFFIX@.cc

# noinst_LTLIBRARIES += libmessage_loop.la
# libmessage_loop_la_SOURCES = message_loop/message_loop.h
# libmessage_loop_la_SOURCES += message_loop/message_loop.cc

# noinst_LTLIBRARIES += libmessage_loop_proxy.la
# libmessage_loop_proxy_la_SOURCES = message_loop/message_loop_proxy.h
# libmessage_loop_proxy_la_SOURCES += message_loop/message_loop_proxy.cc

# noinst_LTLIBRARIES += libtracked_objects.la
# libtracked_objects_la_SOURCES = tracked_objects.h
# libtracked_objects_la_SOURCES += tracked_objects.cc
