SUBDIRS =
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src
noinst_LTLIBRARIES =

# EXTRA_DIST = base/base_export.h
# EXTRA_DIST += base/basictypes.h
# EXTRA_DIST += base/port.h
# EXTRA_DIST += base/compiler_specific.h
# EXTRA_DIST += base/memory/scoped_ptr.h
# EXTRA_DIST += base/move.h
# EXTRA_DIST += base/template_util.h
# EXTRA_DIST += base/file_descriptor_posix.h
